# food

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: api.rs  main.rs
lambdas/: Cargo.toml  build.sh
lambdas/add-meal/: Cargo.toml
lambdas/add-meal-to-day/: Cargo.toml
lambdas/add-meal-to-day/src/: main.rs
lambdas/add-meal/src/: main.rs
lambdas/common/: Cargo.toml
lambdas/common/src/: common.rs  lib.rs
lambdas/get-meal-by-id/: Cargo.toml
lambdas/get-meal-by-id/src/: main.rs
lambdas/search-meal/: Cargo.toml
lambdas/search-meal/src/: main.rs
pulumi/: Pulumi.yaml  index.ts  package-lock.json  package.json
testevents/: add-meal  add-meal-to-day  get-by-id  search  search-no-q
