[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda-web = { version = "0.2.1", features=["hyper"] }
axum = "0.6"
tokio = { version = "1" }
axum-macros = "0.3.2"
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.26.0"
aws-types = "0.55.1"
uuid = { version = "1.2", features = ["v4", "serde"] }
serde = "1.0.152"
serde_json = "1.0.91"
tracing = { version = "0.1", log-always = true }
tracing-subscriber = { version = "0.3", features = ["json"] }
serde_dynamo = { version = "4.2.1", features = ["aws-sdk-dynamodb+0_26"] }
