[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.26.0"
aws-types = "0.55.1"
serde_dynamo = { version = "4.2.1", features = ["aws-sdk-dynamodb+0_26"] }
